@@ -2,6 +2,13 @@ CHANGELOG
 =========
 
 
+2019-11-16
+----------
+
+### Changelog extractor
+* Add git style support with autodetection
+
+
 2019-08-09
 ----------
 
